test/fail/exceptions/invalid_class.lly
#[
SyntaxError: 'integer' is not a valid exception class.
    from invalid_class.lly:8
]#

try:
    var v = 10
except integer:
    var x = 11
